Barebone/Styles/barebone.css
/* Copyright © 2017 SOFTINUX. All rights reserved.
 Licensed under the MIT License, Version 2.0. See License.txt in the project root for license information.
*/

@font-face {
    font-family: 'FontAwesome';
    src: url('node_modules.font_awesome.fonts.fontawesome-webfont.eot?v=4.7.0');
    src: url('node_modules.font_awesome.fonts.fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('node_modules.font_awesome.fonts.fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('node_modules.font_awesome.fonts.fontawesome-webfont.woff?v=4.7.0') format('woff'), url('node_modules.font_awesome.fonts.fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('node_modules.font_awesome.fonts.fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
  font-family: 'Glyphicons Halflings';

  src: url('node_modules.bootstrap.dist.fonts.glyphicons-halfling-regular.eot');
  src: url('node_modules.bootstrap.dist.fonts.glyphicons-halflings-regular?#iefix') format('embedded-opentype'), url('node_modules.bootstrap.dist.fonts.glyphicons-halflings-regular.woff2') format('woff2'), url('node_modules.bootstrap.dist.fonts.glyphicons-halflings-regular.woff') format('woff'), url('node_modules.bootstrap.dist.fonts.glyphicons-halflings-regular.ttf') format('truetype'), url('node_modules.bootstrap.dist.fonts.glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
}

@font-face {
  font-family: "Ionicons";

  src: url("node_modules.ionicons.dist.fonts.ionicons.eot?v=3.0.0-alpha.3");
  src: url("node_modules.ionicons.dist.fonts.ionicons.eot?v=3.0.0-alpha.3#iefix") format("embedded-opentype"), url("node_modules.ionicons.dist.fonts.ionicons.woff2?v=3.0.0-alpha.3") format("woff2"), url("node_modules.ionicons.dist.fonts.ionicons.woff?v=3.0.0-alpha.3") format("woff"), url("node_modules.ionicons.dist.fonts.ionicons.ttf?v=3.0.0-alpha.3") format("truetype"), url("node_modules.ionicons.dist.fonts.ionicons.svg?v=3.0.0-alpha.3#Ionicons") format("svg"); font-weight: normal; font-style: normal; 
}

#toast-container > div {
    opacity: 1;
    filter: alpha(opacity=100);
}

#notification {
  visibility: hidden;
  min-width: 250px;
  margin-left: -125px;
  z-index: 1;
  left: 50%;
  bottom: 30px;
  position: fixed;
}

#notification.show {
  visibility: visible;
}

/* iCheckbox Square */
.icheckbox_square-orange,
.iradio_square-orange {
  background: url(node_modules.icheck.skins.square.orange.png) no-repeat;
}

/* HiDPI support */
@media (-o-min-device-pixel-ratio: 5/4), (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi) {
  .icheckbox_square-orange,
  .iradio_square-orange {
      background-image: url(node_modules.icheck.skins.square.orange@2x.png);
  }
}

.icheckbox_square-yellow,
.iradio_square-yellow {
  background: url(node_modules.icheck.skins.square.yellow.png) no-repeat;
}

/* HiDPI support */
@media (-o-min-device-pixel-ratio: 5/4), (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi) {
  .icheckbox_square-yellow,
  .iradio_square-yellow {
      background-image: url(node_modules.icheck.skins.square.yellow@2x.png);
  }
}

.icheckbox_square-pink,
.iradio_square-pink {
    background: url(node_modules.icheck.skins.square.pink.png) no-repeat;
}

/* HiDPI support */
@media (-o-min-device-pixel-ratio: 5/4), (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi) {
  .icheckbox_square-pink,
  .iradio_square-pink {
      background-image: url(node_modules.icheck.skins.square.pink@2x.png);
  }
}

.icheckbox_square-purple,
.iradio_square-purple {
    background: url(node_modules.icheck.skins.square.purple.png) no-repeat;
}

/* HiDPI support */
@media (-o-min-device-pixel-ratio: 5/4), (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi) {
  .icheckbox_square-purple,
  .iradio_square-purple {
      background-image: url(node_modules.icheck.skins.square.purple@2x.png);
  }
}

.icheckbox_square-grey,
.iradio_square-grey {
    background: url(node_modules.icheck.skins.square.grey.png) no-repeat;
}

/* HiDPI support */
@media (-o-min-device-pixel-ratio: 5/4), (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi) {
  .icheckbox_square-grey,
  .iradio_square-grey {
      background-image: url(node_modules.icheck.skins.square.grey@2x.png);
  }
}

.icheckbox_square-aero,
.iradio_square-aero {
    background: url(node_modules.icheck.skins.square.aero.png) no-repeat;
}

/* HiDPI support */
@media (-o-min-device-pixel-ratio: 5/4), (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi) {
  .icheckbox_square-aero,
  .iradio_square-aero {
      background-image: url(node_modules.icheck.skins.square.aero@2x.png);
  }
}

.icheckbox_square-blue,
.iradio_square-blue {
    background: url(node_modules.icheck.skins.square.blue.png) no-repeat;
}

/* HiDPI support */
@media (-o-min-device-pixel-ratio: 5/4), (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi) {
  .icheckbox_square-blue,
  .iradio_square-blue {
      background-image: url(node_modules.icheck.skins.square.blue@2x.png);
  }
}

.icheckbox_square-green,
.iradio_square-green {
    background: url(node_modules.icheck.skins.square.green.png) no-repeat;
}

/* HiDPI support */
@media (-o-min-device-pixel-ratio: 5/4), (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi) {
  .icheckbox_square-green,
  .iradio_square-green {
      background-image: url(node_modules.icheck.skins.square.green@2x.png);
      -webkit-background-size: 240px 24px;
      background-size: 240px 24px;
  }
}

.icheckbox_square-red,
.iradio_square-red {
    background: url(node_modules.icheck.skins.square.red.png) no-repeat;
}

/* HiDPI support */
@media (-o-min-device-pixel-ratio: 5/4), (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi) {
  .icheckbox_square-red,
  .iradio_square-red {
      background-image: url(node_modules.icheck.skins.square.red@2x.png);
  }
}
/* ... */

